--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "requests>=2.28.0",
     "numpy>=1.21.0",
     "matplotlib>=3.5.0",
+    "seaborn>=0.11.0",
     "plotly>=5.0.0",
     "opencv-python>=4.8.0"
 ]
